Fix vertical alignment on ticket purchase page

--- a/app/style/StakePool.less
+++ b/app/style/StakePool.less
@@ -180,6 +180,14 @@
   vertical-align: top;
 }
 
+.stakepool-purchase-num-tickets-label {
+  .inline-block-mixin;
+
+  text-align: right;
+  width: 9em;
+  font-size: 16px;
+}
+
 .stakepool-purchase-ticket-label-second {
   .inline-block-mixin;
 
